manifests/infra/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      # tls:
      #   mode: Terminate
      #   certificateRefs:
      #     - kind: Secret
      #       name: wildcard-cert-tls
      allowedRoutes:
        namespaces:
          from: All
