manifests/infra/cilium/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: cilium
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - hubble.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: hubble-ui
          port: 80
